opam-version: "2.0"
name: "docteur"
synopsis: "A simple read-only Key/Value from Git to MirageOS"
description: "An opiniated file-system for MirageOS"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/docteur"
doc: "https://dinosaure.github.io/docteur/"
bug-reports: "https://github.com/dinosaure/docteur/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "2.8.0"}
  "docteur" {= version}
  "mirage-unix" {>= "4.0.0"}
  "art" {>= "0.1.1"}
  "bigstringaf" {>= "0.7.0"}
  "carton" {>= "0.4.1"}
  "digestif" {>= "1.0.0"}
  "git" {>= "3.7.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.4.0"}
  "mirage-kv" {>= "3.0.1"}
  "mirage" {with-test}
  "mirage-unix" {with-test}
  "mirage-bootvar-unix" {with-test}
  "mirage-clock-unix" {with-test}
  "mirage-console-unix" {with-test}
  "mirage-logs" {with-test}
  "mirage-channel" {with-test}
  "mirage-fs" {with-test}
  "mirage-block" {with-test}
  "mirage-types" {with-test}
  "mirage-types-lwt" {with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/docteur.git"
