opam-version: "2.0"
name: "kaveero"
synopsis: "A simple read-only Key/Value from Git to MirageOS"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/kaveero"
doc: "https://dinosaure.github.io/kaveero/"
bug-reports: "https://github.com/dinosaure/kaveero/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "2.8.0"}
  "bigarray-compat" {>= "1.0.0"}
  "bigstringaf" {>= "0.7.0"}
  "bos" {>= "0.2.0"}
  "cmdliner" {>= "1.0.4"}
  "digestif" {>= "1.0.0"}
  "fmt" {>= "0.8.9"}
  "fpath" {>= "0.7.3"}
  "git" {>= "3.3.3"}
  "git-cohttp-unix" {>= "3.3.3"}
  "git-unix" {>= "3.3.3"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.4.0"}
  "mmap" {>= "1.1.0"}
  "mtime" {>= "1.2.0"}
  "result" {>= "1.5"}
  "rresult" {>= "0.6.0"}
  "art" {>= "0.1.0"}
  "carton" {>= "0.4.0"}
  "hxd" {>= "0.3.1"}
  "mirage-kv" {>= "3.0.1"}
  "mirage-solo5" {>= "0.6.4"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/kaveero.git"

pin-depends: [
  ["carton.dev" "git+https://github.com/mirage/ocaml-git.git#eecfb5d780df2548da3a3ca90ec34a01ba825d8d"]
  ["art.dev" "git+https://github.com/dinosaure/art.git#7ed64f90adb484f40329685283156993d04c7c03"]
]
