opam-version: "2.0"
name: "docteur"
synopsis: "A simple read-only Key/Value from Git to MirageOS"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/docteur"
doc: "https://dinosaure.github.io/docteur/"
bug-reports: "https://github.com/dinosaure/docteur/issues"
description: """An opiniated file-system for MirageOS"""
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "2.8.0"}
  "bigarray-compat" {>= "1.0.0"}
  "bigstringaf" {>= "0.7.0"}
  "bos" {>= "0.2.0"}
  "cmdliner" {>= "1.0.4"}
  "digestif" {>= "1.0.0"}
  "fmt" {>= "0.8.9"}
  "fpath" {>= "0.7.0"}
  "git" {>= "3.7.0"}
  "git-unix" {>= "3.7.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.4.0"}
  "mmap" {>= "1.1.0"}
  "mtime" {>= "1.2.0"}
  "result" {>= "1.5"}
  "rresult" {>= "0.6.0"}
  "carton" {>= "0.4.0"}
  "art" {>= "0.1.1"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/docteur.git"
